# data_browser

./: .gitattributes  .gitignore  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
apps/browser/: Dockerfile  README.md  main.py  pyproject.toml
apps/browser/src/browser/: config.py  main.py
apps/pipelines/: Dockerfile  README.md  pyproject.toml
apps/pipelines/src/pipelines/: cache.py  config.py  dependencies.py  main.py
data/: transaction_db.csv
libs/data/: pyproject.toml
libs/data/src/data/: __init__.py  dtypes.py  loader.py
libs/data/src/data/agents/: agents.py  typing.py
libs/data/src/data/models/: schemas.py  tables.py
libs/data/src/data/transforms/: base.py  formatting.py  standard.py
libs/data/tests/: test_base.py  test_formatting.py  test_standard.py
libs/pipelines_client/: README.md  pyproject.toml
libs/pipelines_client/src/pipelines_client/: __init__.py  client.py  requests.py  responses.py
scripts/localstack/: create-bucket.sh
