[project]
name = "pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "data",
    "fastapi>=0.116.2",
    "uvicorn[standard]>=0.32.0",
    "boto3>=1.35.0",
    "python-multipart>=0.0.6",
    "pipelines-client",
]

[tool.uv.sources]
data = { workspace = true }
pipelines-client = { workspace = true }
