[project]
name = "pipelines-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zach Werkhoven", email = "zach.werkhoven@fpsinc.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.9",
    "httpx>=0.25.0",
    "typing-extensions>=4.8.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
